force-app/main/default/objects/Survey__c/fields/Account_Status__c.field-meta.xml
<CustomField>
    <fullName>Account_Status__c</fullName>
    <description>The Account Status of the related Account</description>
    <formula>TEXT(Account__r.Account_Status__c)</formula>
    <label>Account Status</label>
    <type>Text</type>
</CustomField>