force-app/main/default/objects/Survey__c/fields/Accountant__c.field-meta.xml
<CustomField>
    <fullName>Accountant__c</fullName>
    <label>Accountant</label>
    <length>255</length>
    <type>Text</type>
</CustomField>