force-app/main/default/objects/Survey__c/fields/Accountant_Knowledge__c.field-meta.xml
<CustomField>
    <fullName>Accountant_Knowledge__c</fullName>
    <label>Accountant Knowledge</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>