force-app/main/default/objects/Survey__c/fields/Affordability__c.field-meta.xml
<CustomField>
    <fullName>Affordability__c</fullName>
    <label>Affordability</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>