force-app/main/default/objects/Survey__c/fields/Any_feedback__c.field-meta.xml
<CustomField>
    <fullName>Any_feedback__c</fullName>
    <label>Any feedback?</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>