force-app/main/default/objects/Survey__c/fields/Cancellation_Comment__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Comment__c</fullName>
    <label>Cancellation Comment</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>