force-app/main/default/objects/Survey__c/fields/Continue_Service__c.field-meta.xml
<CustomField>
    <fullName>Continue_Service__c</fullName>
    <label>Continue Service</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Very Likely</fullName>
            </value>
            <value>
                <fullName>Somewhat likely</fullName>
            </value>
            <value>
                <fullName>Neutral</fullName>
            </value>
            <value>
                <fullName>Somewhat unlikely</fullName>
            </value>
            <value>
                <fullName>Very unlikely</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>