force-app/main/default/objects/Survey__c/fields/Customer_Number__c.field-meta.xml
<CustomField>
    <fullName>Customer_Number__c</fullName>
    <description>The Customer Number of the related Account</description>
    <formula>Account__r.Customer_Number__c</formula>
    <label>Customer Number</label>
    <type>Text</type>
</CustomField>