force-app/main/default/objects/Survey__c/fields/Customer_Service__c.field-meta.xml
<CustomField>
    <fullName>Customer_Service__c</fullName>
    <label>Customer Service</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>