force-app/main/default/objects/Survey__c/fields/Experience_Rating__c.field-meta.xml
<CustomField>
    <fullName>Experience_Rating__c</fullName>
    <label>Experience Rating</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Better than last year</fullName>
            </value>
            <value>
                <fullName>Somewhat better than last year</fullName>
            </value>
            <value>
                <fullName>The same</fullName>
            </value>
            <value>
                <fullName>Worse than last year</fullName>
            </value>
            <value>
                <fullName>New member</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>