force-app/main/default/objects/Survey__c/fields/Friendly_Courteous__c.field-meta.xml
<CustomField>
    <fullName>Friendly_Courteous__c</fullName>
    <label>Friendly / Courteous</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>