force-app/main/default/objects/Survey__c/fields/How_are_we_doing_Comment__c.field-meta.xml
<CustomField>
    <fullName>How_are_we_doing_Comment__c</fullName>
    <label>How are we doing - Comment</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>