force-app/main/default/objects/Survey__c/fields/How_are_we_doing_Rating__c.field-meta.xml
<CustomField>
    <fullName>How_are_we_doing_Rating__c</fullName>
    <label>How are we doing - Rating</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>