force-app/main/default/objects/Survey__c/fields/How_Often_Used_Service__c.field-meta.xml
<CustomField>
    <fullName>How_Often_Used_Service__c</fullName>
    <label>How Often Used Service</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Once per week or more</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>