force-app/main/default/objects/Survey__c/fields/interaction_level__c.field-meta.xml
<CustomField>
    <fullName>interaction_level__c</fullName>
    <label>interaction level</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not Frequent Enough</fullName>
            </value>
            <value>
                <fullName>Adequate</fullName>
            </value>
            <value>
                <fullName>Too Frequent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>