force-app/main/default/objects/Survey__c/fields/Lead_Source__c.field-meta.xml
<CustomField>
    <fullName>Lead_Source__c</fullName>
    <formula>text(Account__r.Lead_Source__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lead Source</label>
    <type>Text</type>
</CustomField>