force-app/main/default/objects/Survey__c/fields/Length_of_Time_Subscribed__c.field-meta.xml
<CustomField>
    <fullName>Length_of_Time_Subscribed__c</fullName>
    <label>Length of Time Subscribed</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Less than 1 month</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>