force-app/main/default/objects/Survey__c/fields/Mitel_Zone__c.field-meta.xml
<CustomField>
    <fullName>Mitel_Zone__c</fullName>
    <description>The Mitel Team from the related Account</description>
    <formula>Account__r.Mitel_Team__c</formula>
    <label>Mitel Zone</label>
    <type>Text</type>
</CustomField>