force-app/main/default/objects/Survey__c/fields/Primary_Cancellation_Reason__c.field-meta.xml
<CustomField>
    <fullName>Primary_Cancellation_Reason__c</fullName>
    <label>Primary Cancellation Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>My company is no longer in business</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>