force-app/main/default/objects/Survey__c/fields/Reason_for_Score__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Score__c</fullName>
    <label>Reason for Score</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>