force-app/main/default/objects/Survey__c/fields/Recommend_Service_NPS__c.field-meta.xml
<CustomField>
    <fullName>Recommend_Service_NPS__c</fullName>
    <label>Recommend Service (NPS)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>