force-app/main/default/objects/Survey__c/fields/Satisfaction__c.field-meta.xml
<CustomField>
    <fullName>Satisfaction__c</fullName>
    <label>Satisfaction</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>