force-app/main/default/objects/Survey__c/fields/Tax_Return_Completion_Time__c.field-meta.xml
<CustomField>
    <fullName>Tax_Return_Completion_Time__c</fullName>
    <label>Tax Return Completion Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>