force-app/main/default/objects/Survey__c/fields/Understand_Resolve__c.field-meta.xml
<CustomField>
    <fullName>Understand_Resolve__c</fullName>
    <label>Understand &amp; Resolve</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>