force-app/main/default/objects/Survey__c/fields/Virtual_Tax_Organizer_Experience__c.field-meta.xml
<CustomField>
    <fullName>Virtual_Tax_Organizer_Experience__c</fullName>
    <label>Virtual Tax Organizer Experience</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>