force-app/main/default/objects/Survey__c/fields/Wait_Time__c.field-meta.xml
<CustomField>
    <fullName>Wait_Time__c</fullName>
    <label>Wait Time</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Much shorter than expected</fullName>
            </value>
            <value>
                <fullName>Shorter than expected</fullName>
            </value>
            <value>
                <fullName>About what I expected</fullName>
            </value>
            <value>
                <fullName>Longer than  expected</fullName>
            </value>
            <value>
                <fullName>Much longer than expected.</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>