force-app/main/default/objects/Survey__c/recordTypes/Client_Satisfaction_Survey.recordType-meta.xml
<RecordType>
    <fullName>Client_Satisfaction_Survey</fullName>
    <active>true</active>
    <label>Survey</label>
</RecordType>